cmake_minimum_required(VERSION 3.13)
project(Clion_CPPFoundation_Day02)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clion_CPPFoundation_Day02 "01 作业案例 设计圆类周长.cpp" "02 作业案例 设计学生类.cpp" "03 内联函数 宏函数的缺陷.cpp" "04 函数默认参数以及占位符.cpp" "05 函数重载.cpp" "06 extern c.cpp" test.h test.c "07 C语言下的封装.c" "08 C++语言下的封装.cpp" "09 建议成员变量设为private.cpp")